Initial commit for SIT722 Task 8.2C Terraform files

--- a/part4/book_catalog/Dockerfile
+++ b/part4/book_catalog/Dockerfile
@@ -1,1 +1,6 @@
-# Your Solution
+# Dockerfile for book_catalog microservice
+FROM node:14
+WORKDIR /app
+COPY . .
+RUN npm install
+CMD ["npm", "start"]
