--- a/part4/inventory_management/Dockerfile
+++ b/part4/inventory_management/Dockerfile
@@ -1,1 +1,6 @@
-# Your Solution
+# Dockerfile for inventory_management microservice
+FROM node:14
+WORKDIR /app
+COPY . .
+RUN npm install
+CMD ["npm", "start"]
